syntax = "nbt";
package minecpp.message.nbt;

message Memories {
}

message Brain {
  Memories memories = 1;
}

message Abilities {
  float fly_speed = 1 [label = "flySpeed"];
  int8 flying = 2;
  int8 instabuild = 3;
  int8 invulnerable = 4;
  int8 may_build = 5 [label = "mayBuild"];
  int8 mayfly = 6;
  float walk_speed = 7 [label = "walkSpeed"];
}

message RecipeBook {
  int8 is_blasting_furnace_filtering_craftable = 1 [label = "isBlastingFurnaceFilteringCraftable"];
  int8 is_blasting_furnace_gui_open = 2 [label = "isBlastingFurnaceGuiOpen"];
  int8 is_filtering_craftable = 3 [label = "isFilteringCraftable"];
  int8 is_furnace_filtering_craftable = 4 [label = "isFurnaceFilteringCraftable"];
  int8 is_furnace_gui_open = 5 [label = "isFurnaceGuiOpen"];
  int8 is_gui_open = 6 [label = "isGuiOpen"];
  int8 is_smoker_filtering_craftable = 7 [label = "isSmokerFilteringCraftable"];
  int8 is_smoker_gui_open = 8 [label = "isSmokerGuiOpen"];
}

message Version {
  int32 id = 1 [label = "Id"];
  string name = 2 [label = "Name"];
  int8 snapshot = 3 [label = "Snapshot"];
}

message BiomeSource {
  string preset = 1;
  int8 large_biomes = 2;
  int64 seed = 3;
  string type = 4;
}

message Generator {
  BiomeSource biome_source = 1;
  int64 seed = 2;
  string settings = 3;
  string type = 4;
}

message DimentionData {
  Generator generator = 1;
  string type = 2;
}

message Dimentions {
  DimentionData overworld = 1 [label = "minecraft:overworld"];
  DimentionData the_end = 2 [label = "minecraft:the_end"];
  DimentionData the_nether = 3 [label = "minecraft:the_nether"];
}

message WorldGen {
  int8 bonus_chest = 1;
  Dimentions dimensions = 2;
  int8 generate_features = 3;
  int64 seed = 4;
}

message DataPacks {
  longs disabled = 1 [label = "Disabled"];
}

message DragonFight {
  int8 dragon_killed = 1 [label = "DragonKilled"];
  int8 previously_killed = 3 [label = "PreviouslyKilled"];
}

message CustomBossEvents {
}

message Player {
  float absorption_amount = 1 [label = "AbsorptionAmount"];
  int16 air = 2 [label = "Air"];
  Brain brain = 4 [label = "Brain"];
  int32 data_version = 5 [label = "DataVersion"];
  int16 death_time = 6 [label = "DeathTime"];
  string dimension = 7 [label = "Dimension"];
  float fall_distance = 9 [label = "FallDistance"];
  int8 fall_flying = 10 [label = "FallFlying"];
  int16 fire = 11 [label = "Fire"];
  float health = 12 [label = "Health"];
  int32 hurt_by_timestamp = 13 [label = "HurtByTimestamp"];
  int16 hurt_time = 14 [label = "HurtTime"];
  int8 invulnerable = 16 [label = "Invulnerable"];
  int8 on_ground = 18 [label = "OnGround"];
  int32 portal_cooldown = 19 [label = "PortalCooldown"];
  int32 score = 22 [label = "Score"];
  int32 selected_item_slot = 23 [label = "SelectedItemSlot"];
  int16 sleep_timer = 24 [label = "SleepTimer"];
  ints uuid = 25 [label = "UUID"];
  int32 xp_level = 26 [label = "XpLevel"];
  float xp_p = 27 [label = "XpP"];
  int32 xp_seed = 28 [label = "XpSeed"];
  int32 xp_total = 29 [label = "XpTotal"];
  Abilities abilities = 30;
  float food_exhaustion_level = 31 [label = "foodExhaustionLevel"];
  int32 food_level = 32 [label = "foodLevel"];
  float food_saturation_level = 33 [label = "foodSaturationLevel"];
  int32 food_tick_timer = 34 [label = "foodTickTimer"];
  int32 player_game_type = 35 [label = "playerGameType"];
  int32 previous_player_game_type = 36 [label = "previousPlayerGameType"];
  RecipeBook recipe_book = 37 [label = "recipeBook"];
  int8 seen_credits = 38 [label = "seenCredits"];
}

message GameRules {
  string announce_advancements = 1 [label = "announceAdvancements"];
  string command_block_output = 2 [label = "commandBlockOutput"];
  string disable_elytra_movement_check = 3 [label = "disableElytraMovementCheck"];
  string disable_raids = 4 [label = "disableRaids"];
  string do_daylight_cycle = 5 [label = "doDaylightCycle"];
  string do_entity_drops = 6 [label = "doEntityDrops"];
  string do_fire_tick = 7 [label = "doFireTick"];
  string do_immediate_respawn = 8 [label = "doImmediateRespawn"];
  string do_insomnia = 9 [label = "doInsomnia"];
  string do_limited_crafting = 10 [label = "doLimitedCrafting"];
  string do_mob_loot = 11 [label = "doMobLoot"];
  string do_mob_spawning = 12 [label = "doMobSpawning"];
  string do_patrol_spawning = 13 [label = "doPatrolSpawning"];
  string do_tile_drops = 14 [label = "doTileDrops"];
  string do_trader_spawning = 15 [label = "doTraderSpawning"];
  string do_weather_cycle = 16 [label = "doWeatherCycle"];
  string drowning_damage = 17 [label = "drowningDamage"];
  string fall_damage = 18 [label = "fallDamage"];
  string fire_damage = 19 [label = "fireDamage"];
  string forgive_dead_players = 20 [label = "forgiveDeadPlayers"];
  string keep_inventory = 21 [label = "keepInventory"];
  string log_admin_commands = 22 [label = "logAdminCommands"];
  string max_command_chain_length = 23 [label = "maxCommandChainLength"];
  string max_entity_cramming = 24 [label = "maxEntityCramming"];
  string mob_griefing = 25 [label = "mobGriefing"];
  string natural_regeneration = 26 [label = "naturalRegeneration"];
  string random_tick_speed = 27 [label = "randomTickSpeed"];
  string reduced_debug_info = 28 [label = "reducedDebugInfo"];
  string send_command_feedback = 29 [label = "sendCommandFeedback"];
  string show_death_messages = 30 [label = "showDeathMessages"];
  string spawn_radius = 31 [label = "spawnRadius"];
  string spectators_generate_chunks = 32 [label = "spectatorsGenerateChunks"];
  string universal_anger = 33 [label = "universalAnger"];
}

message LevelData {
  double border_center_x = 1 [label = "BorderCenterX"];
  double border_center_z = 2 [label = "BorderCenterZ"];
  double border_damage_per_block = 3 [label = "BorderDamagePerBlock"];
  double border_safe_zone = 4 [label = "BorderSafeZone"];
  double border_size = 5 [label = "BorderSize"];
  double border_size_lerp_target = 6 [label = "BorderSizeLerpTarget"];
  int64 border_size_lerp_time = 7 [label = "BorderSizeLerpTime"];
  double border_warning_blocks = 8 [label = "BorderWarningBlocks"];
  double border_warning_time = 9 [label = "BorderWarningTime"];
  CustomBossEvents custom_boss_events = 10 [label = "CustomBossEvents"];
  DataPacks data_packs = 11 [label = "DataPacks"];
  int32 data_version = 12 [label = "DataVersion"];
  int64 day_time = 13 [label = "DayTime"];
  int8 difficulty = 14 [label = "Difficulty"];
  int8 difficulty_locked = 15 [label = "DifficultyLocked"];
  DragonFight dragon_fight = 16 [label = "DragonFight"];
  GameRules game_rules = 17 [label = "GameRules"];
  int32 game_type = 18 [label = "GameType"];
  int64 last_played = 19 [label = "LastPlayed"];
  string level_name = 20 [label = "LevelName"];
  Player player = 21 [label = "Player"];
  int32 spawn_x = 24 [label = "SpawnX"];
  int32 spawn_y = 25 [label = "SpawnY"];
  int32 spawn_z = 26 [label = "SpawnZ"];
  int64 time = 27 [label = "Time"];
  Version version = 28 [label = "Version"];
  int32 wandering_trader_spawn_chance = 29 [label = "WanderingTraderSpawnChance"];
  int32 wandering_trader_spawn_delay = 30 [label = "WanderingTraderSpawnDelay"];
  int8 was_modded = 31 [label = "WasModded"];
  WorldGen world_gen_settings = 32 [label = "WorldGenSettings"];
  int8 allow_commands = 33 [label = "allowCommands"];
  int32 clear_weather_time = 34 [label = "clearWeatherTime"];
  int8 hardcore = 35;
  int8 initialized = 36;
  int32 rain_time = 37 [label = "rainTime"];
  int8 raining = 38;
  int32 thunder_time = 39 [label = "thunderTime"];
  int8 thundering = 40;
  int32 version2 = 41;
}

message Level {
  LevelData data = 1 [label = "Data"];
}
